<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

            <EditText
                android:id="@+id/tvFormula"
                style="@style/styleFormula"
                android:layout_weight="1"
                android:fadeScrollbars="true"
                android:text="@string/strFormula"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tvResult"
                style="@style/styleResult"
                android:gravity="right"
                android:text="@string/strResult"
                android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtonArray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAC"
                style="@style/btnStylepale_brown"
                android:text="@string/strAC" />

            <Button
                android:id="@+id/btnPLeft"
                style="@style/btnStylepale_brown"
                android:text="@string/strPLeft" />

            <Button
                android:id="@+id/btnPRight"
                style="@style/btnStylepale_brown"
                android:text="@string/strPRight" />

            <Button
                android:id="@+id/btnDel"
                style="@style/btnStylepale_brown"
                android:text="@string/strDel" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnDgt7"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt7" />

            <Button
                android:id="@+id/btnDgt8"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt8" />

            <Button
                android:id="@+id/btnDgt9"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt9" />

            <Button
                android:id="@+id/btnOpDiv"
                style="@style/btnStylepale_brown"
                android:text="@string/strOpDiv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnDgt4"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt4" />

            <Button
                android:id="@+id/btnDgt5"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt5" />

            <Button
                android:id="@+id/btnDgt6"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt6" />

            <Button
                android:id="@+id/btnOpMul"
                style="@style/btnStylepale_brown"
                android:text="@string/strOpMul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnDgt1"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt1" />

            <Button
                android:id="@+id/btnDgt2"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt2" />

            <Button
                android:id="@+id/btnDgt3"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt3" />

            <Button
                android:id="@+id/btnOpMinus"
                style="@style/btnStylepale_brown"
                android:text="@string/strOpMinus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnDgt0"
                style="@style/btnStylepale_brown"
                android:text="@string/strDgt0" />

            <Button
                android:id="@+id/btnDot"
                style="@style/btnStylepale_brown"
                android:text="@string/strDot" />

            <Button
                android:id="@+id/btnEnter"
                style="@style/btnStylepale_brown"
                android:text="@string/strEnter" />

            <Button
                android:id="@+id/btnOpPlus"
                style="@style/btnStylepale_brown"
                android:text="@string/strOpPlus" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>